  cross-validation criterion (available via the $test accessor)
- Speed up the production of bootstrapped confidence bands for impulse 
  responses in VECM models
- Online help: ensure that option flags don't break across lines (and
  also colorize them for emphasis)
- Fix bug: possible crash in tsls when there are missing values and a
  regressor is all-zero at the complete observations 

2011-10-17 version 1.9.6
- Add an importer for xlsx (Office Open XML) worksheet data
- cum() function: make this respect panel structure
- ranking() function: accept vectors as well as series
- New function, hdprod(): implements "direct row product" for matrices
- New functions for series: skewness() and kurtosis()
- New function uniq(): acts like values() but leaves the distinct values
  in their order of appearance
- New function pshrink(): compacts a panel series to a column vector
  with one observation per individual
- New function randint(): returns a random integer in a specified closed
  interval
- allow non-integer degrees of freedom for Student's t in cdf(), invcdf()
  and randgen()
- allow use of an (optional) "mask" argument with the panel statistics
  functions pmean() and friends
- list arguments to functions: allow use of anonymous lists
- extend the invcdf() function to the gamma and std. GED distributions
- GUI script editor: add Cut and Redo toolbar buttons, and also a
  Stop button to interrupt script execution; improve handling of Tab
  and Enter
- GUI session Notes: add option to pop up the notes on opening a
  session file
- build with SSE2 enabled: ensure that the C compiler SSE2 option is
  not wiped out if the user (re-)specifies CFLAGS when doing "make"
- Defining lists: document the wildcard operator, *, and add an
  ellipsis operator (two dots).
- VARs: (re-)enable HAC standard errors via a new option, --robust-hac
- "var" command with --lagselect option: make the table of information
  criteria available as $test